--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Task 1</h1>
     <h2>Introduction to version control</h2>
+    <p>The Technical Mentor, Johnston Ndambuki took us througth the basics</p>
 </body>
 </html>
